Changelog
*********

1.1.dev0 (unreleased)
=====================

* The `psj_html` processor now delivers unprettified HTML output.
  This can avoid gaps in rendered HTML output.


1.0 (2015-07-16)
=====================

* Use `ulif.openoffice` 1.1 from now on.

* Major rewrite to become compatible with Plone 4.x

* Moved module root from `src` to egg root.


0.3 (2013-08-02)
================

Feature changes
---------------

* Removed ``oooctl``, ``convert`` scripts. They are now maintained in
  a separate package `ulif.openoffice` (which needs to be
  installed). This is more reliable in that a locally installed
  OpenOffice.org suite (as provided by dists like Ubuntu) can be used.

  We now also have a distinct interface to communicate with an
  OpenOffice.org server.

* Changed OpenOffice.org transforms to use new ulif.openoffice
  package for document conversion.

* Added .docx transformations. We can now also convert .docx files to
  .pdf and HTML.

* Added conditional registering of mime-type for .docx files and icon.


0.2.1 (2008-12-09)
==================

Bug fixes
---------

* Fix broken download URL for OpenOffice.org in buildout.

* Add version information for ``GenericSetup``.


0.2 (2008-12-09)
================

Bug fixes
---------

* Fixed race condition or whatever, that stopped the conversion from
  working with ``Products.LinguaPlone`` package.

* Enabled XHTML-1.0 output instead of HTML.

* Improved transform initialization to cope with already installed
  transforms of same names. Those are now unregistered first.

Feature changes
---------------

* Added support for MS word documents.

* Added tidy call for generating XHTML from HTML

* Added script for preparing/restoring libs (UN*X only).


0.1.1 (2008-03-22)
==================

Bug fixes
---------

* Pinned down plone version: > 3.0 < 3.1dev.

Feature changes
---------------

* Added start/stop scripts for OOo server (UN*X only).

* Added standalone converter that uses OOo in background.
